--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-}
+} */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
